[package]
name = "endpoint-libs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
convert_case = "0.6"
itertools = "0.12"
regex = "1.5"
clap = { version = "4.5", features = ["derive", "env"] }
futures = "0.3"
rustls-pemfile = "2.1"
tokio = { version = "1.39", features = ["full"]}
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3" , features = ["env-filter", "std"] }
tokio-cron-scheduler = "0.11"
dashmap = "6.0"
tokio-tungstenite = "0.23"
tokio-postgres = "0.7"
bytes = "1.7"
ethers = "2.0"
chrono = "0.4"
urlencoding = "2.1"
tokio-rustls = "0.26"
log-panics = "2.1"
postgres-from-row = "0.5"
deadpool-postgres = { version = "0.14", features = ["serde"]}
secrecy = {version = "0.8", features = ["serde"]}
hyper = {version = "1.4", features = ["server"]}
kanal = "0.1.0-pre8"
reqwest = "0.12"
async-trait = "0.1"
parking_lot = "0.12"
alloy-primitives = "0.8"
hex = "0.4"
rust_decimal = "1.36"
tracing-appender = "0.2"
serde_path_to_error = "0.1"
rustls = "0.23"
lazy_static = "1.5"
tokio-util = "0.7"
hyper-util = {version = "0.1", features = ["full"]}
rev_lines = "0.3"
